RESOLVED FIXED160213
Payment Session does not end if user closes all Safari windows
https://bugs.webkit.org/show_bug.cgi?id=160213
Summary Payment Session does not end if user closes all Safari windows
Anders Carlsson
Reported 2016-07-26 14:24:25 PDT
Session does not end if user closes all Safari windows
Attachments
Patch (3.57 KB, patch)
2016-07-26 14:27 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-07-26 14:27:22 PDT
Anders Carlsson
Comment 2 2016-07-26 15:04:34 PDT
Note You need to log in before you can comment on or make changes to this bug.