Payment session does not end if user closes all Safari windows https://bugs.webkit.org/show_bug.cgi?id=160213 rdar://problem/27480873

Reviewed by Tim Horton.

Listen for the NSWindowWillCloseNotification of the sheet window and hide the payment UI when
the sheet window is going to be closed.

* UIProcess/ApplePay/WebPaymentCoordinatorProxy.h:
* UIProcess/ApplePay/mac/WebPaymentCoordinatorProxyMac.mm:
(WebKit::WebPaymentCoordinatorProxy::platformShowPaymentUI):
(WebKit::WebPaymentCoordinatorProxy::hidePaymentUI):

Canonical link: https://commits.webkit.org/178370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203741 268f45cc-cd09-0410-ab3c-d52691b4dbfc